--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Annika Marriner Photography</title>
   <link rel="stylesheet" href="photography.css">
 </head>
 
@@ -40,7 +40,7 @@
               </div>
               <a href="ourcustomers.html">Our Customers</a>
               <a href="about-annika.html">About Annika</a>
-              <a href="contact-us.html">Pricing</a>
+              <a href="pricing.html.html">Pricing</a>
 
               <div class="dropdown dropdown--ContactUs">
                 <a href="contact-us.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
