--- a/termsconditions.html
+++ b/termsconditions.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Annika Marriner Photography</title>
   <link rel="stylesheet" href="photography.css">
 </head>
 
@@ -40,7 +40,7 @@
               </div>
               <a href="ourcustomers.html">Our Customers</a>
               <a href="about-annika.html">About Annika</a>
-              <a href="contact-us.html">Pricing</a>
+              <a href="pricing.html.html">Pricing</a>
 
               <div class="dropdown dropdown--ContactUs">
                 <a href="contact-us.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
@@ -68,7 +68,7 @@
            We transfer your digital files to you, via WeTransfer you will receive and email asking you <br>
            to download them to your computer. These files are printable to the specific size you have ordered <br>
            are often state this. They will be high resolution printable files which are best downloaded onto a <br>
-           storage drive that sits beside your computer, or on your computer with a lot of drive space, but definitley<br>
+           storage drive that sits beside your computer, or on your computer with a lot of drive space, but definitely<br>
            not on a device such as a phone.
            <br>
            <br>
