--- a/FAQ.html
+++ b/FAQ.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Annika Marriner Photography</title>
   <link rel="stylesheet" href="photography.css">
 </head>
 
@@ -40,7 +40,7 @@
               </div>
               <a href="ourcustomers.html">Our Customers</a>
               <a href="about-annika.html">About Annika</a>
-              <a href="contact-us.html">Pricing</a>
+              <a href="pricing.html">Pricing</a>
 
               <div class="dropdown dropdown--ContactUs">
                 <a href="contact-us.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
@@ -57,6 +57,58 @@
       </div>
       </div>
 
+<div class="content-FAQ">
+  <h2 class="faq-title">Frequently Asked Questions</h2>
+
+  <div class="faq-item">
+    <div class="faq-item__question">
+      <h4>What type of photography do you take?</h4>
+    </div>
+    <div class="faq-item__answer">
+      <p>My work is described as original and natural. I am particularly interested in gel photography. I also enjoy taking photos of families, pets and flora.</p>
+    </div>
+  </div>
+
+  <div class="faq-item">
+    <div class="faq-item__question">
+      <h4>Where will the session be held?</h4>
+    </div>
+    <div class="faq-item__answer">
+      <p>We can either hold the session at my studios or you may choose the perfect location of your choice. My aim is to make you feel comfortable so your photos look natural for years to come</p>
+    </div>
+  </div>
+
+  <div class="faq-item">
+    <div class="faq-item__question">
+      <h4>What is i dont buy any photos?</h4>
+    </div>
+    <div class="faq-item__answer">
+      <p>There is no obligation to purchase your photos and there is no minimum order size</p>
+    </div>
+  </div>
+
+  <div class="faq-item">
+    <div class="faq-item__question">
+      <h4>Can i get digital and hard copy images?</h4>
+    </div>
+    <div class="faq-item__answer">
+      <p>Once we have taken your photos you will receive a number of thumbnails to choose from. These thumbnails will be delivered to your electronically. Once you have decided which photos you would like
+        to purcahse just contact us and place your photo. It's that easy.
+      </p>
+    </div>
+  </div>
+
+  <div class="faq-item">
+    <div class="faq-item__question">
+      <h4>What should I wear?</h4>
+    </div>
+    <div class="faq-item__answer">
+      <p>Be yourself, be comfortable and wear a smile</p>
+    </div>
+  </div>
+
+  <button class="getintouch-faq"><a href="contact-us.html"><p>Get In Touch</p></a></button>
+  </div>
 
 
 
