--- a/contact-us-submit.html
+++ b/contact-us-submit.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Annika Marriner Photography</title>
   <link rel="stylesheet" href="photography.css">
 </head>
 
@@ -40,7 +40,7 @@
               </div>
               <a href="ourcustomers.html">Our Customers</a>
               <a href="about-annika.html">About Annika</a>
-              <a href="contact-us.html">Pricing</a>
+              <a href="pricing.html">Pricing</a>
 
               <div class="dropdown dropdown--ContactUs">
                 <a href="contact-us.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
@@ -56,8 +56,14 @@
         </div>
       </div>
       </div>
-      </div><!--footer html section-->
-      <div class="footer footer--homepage row">
+      <div class="content-image">
+        <img src="images/contactus-submit.png" alt="contact us submit photo os graduation">
+          </div>
+      </div>
+      
+      
+      <!--footer html section-->
+      <div class="footer footer-contactsubmit row">
         <div class="footer__contact_us contactus-footer col">Contact us
         <div class="footer-option">
           Phone Number: <a href="tel:+64 276-780-011">+64-276-780-011</a>
