--- a/families.html
+++ b/families.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Annika Marriner Photography</title>
   <link rel="stylesheet" href="photography.css">
 </head>
 
@@ -40,7 +40,7 @@
               </div>
               <a href="ourcustomers.html">Our Customers</a>
               <a href="about-annika.html">About Annika</a>
-              <a href="contact-us.html">Pricing</a>
+              <a href="pricing.html">Pricing</a>
 
               <div class="dropdown dropdown--ContactUs">
                 <a href="contact-us.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
@@ -56,8 +56,43 @@
         </div>
       </div>
       </div>
-    <!--footer html section-->
-    <div class="footer footer--homepage row">
+
+      <div class="content-gallery">
+        <h2>Occasions</h2>
+        
+        <div class="gallery-row">
+          <div class="gallery-card" onclick="goto('/cats.html')">
+            <div class="gallery-card__image">
+              <img src="images/celebrationcover.png" max-width="920px" max-height="798px" alt="Wedding photo">
+            </div>
+            <div class="gallery-card__title">
+              Celebrations
+            </div>
+          </div>
+  
+          <div class="gallery-card" onclick="goto('/families.html')">
+            <div class="gallery-card__image">
+              <img src="images/eventcover.png" max-width="920px" max-height="798px" alt="A gradutation photo">
+            </div>
+            <div class="gallery-card__title">
+              Events
+            </div>
+          </div>
+        </div>
+        <div class="gallery-row">
+          <div class="gallery-card" onclick="goto('/nature.html')">
+            <div class="gallery-card__image">
+              <img src="images/festivecover.png" max-width="920px" max-height="798px" alt="Japan light show">
+            </div>
+            <div class="gallery-card__title">
+              Festive
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--footer html section-->
+      <div class="footer footer--homepage row">
         <div class="footer__contact_us contactus-footer col">Contact us
         <div class="footer-option">
           Phone Number: <a href="tel:+64 276-780-011">+64-276-780-011</a>
@@ -65,8 +100,6 @@
           Email: <a href="mailto:annikamarriner@shcs.school.nz">annikamarriner@shcs.school.nz</a><br>          
         </div>
       </div>
-
-
       <div class="footer about-footer col">About 
         <div class="footer-option">
           <a href="about-annika.html">About Annika Page</a>
@@ -76,9 +109,6 @@
           <a href="FAQ.html">Frequently asked questions</a>         
         </div>
       </div>
-
-
-  
       <div class="footer information-footer col">Information
         <div class="footer-option">
           <a href="about-annika.html">About Annika Page</a>
@@ -87,21 +117,19 @@
           <br>
           <a href="termsconditions.html">Terms and Conditions</a>         
         </div>
-  
-        </div>
       </div>
-
     </div>
   </div>
+</div>
 
-  <!-- JS for VUE and Airtable -->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.2/axios.min.js"> </script>
-  <!--allows us to display and get data from airtable-->
-  <script src="https://cdn.jsdelivr.net/nmp/vue@2.5.13/dist/vue.js"></script>
-  <!--allows us to display dynamic data easily-->
+<!-- JS for VUE and Airtable -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.2/axios.min.js"> </script>
+<!--allows us to display and get data from airtable-->
+<script src="https://cdn.jsdelivr.net/nmp/vue@2.5.13/dist/vue.js"></script>
+<!--allows us to display dynamic data easily-->
 
-  <!--Custome JS for VUE -->
-  <script src="VUE.js"></script>
+<!--Custome JS for VUE -->
+<script src="VUE.js"></script>
 
 </div>
 
