--- a/pets.html
+++ b/pets.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Annika Marriner Photography</title>
   <link rel="stylesheet" href="photography.css">
 </head>
 
@@ -40,7 +40,7 @@
               </div>
               <a href="ourcustomers.html">Our Customers</a>
               <a href="about-annika.html">About Annika</a>
-              <a href="contact-us.html">Pricing</a>
+              <a href="pricing.html">Pricing</a>
 
               <div class="dropdown dropdown--ContactUs">
                 <a href="contact-us.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
@@ -56,41 +56,79 @@
         </div>
       </div>
       </div>
-    <!--footer html section-->
-    <div class="footer footer--homepage row">
-      <div class="footer__contact_us contactus-footer col">Contact us
-      <div class="footer-option">
-        Phone Number: <a href="tel:+64 276-780-011">+64-276-780-011</a>
-        <br>
-        Email: <a href="mailto:annikamarriner@shcs.school.nz">annikamarriner@shcs.school.nz</a><br>          
+
+      <div class="content-gallery">
+        <h2>Pets</h2>
+        
+        <div class="gallery-row">
+          <div class="gallery-card" onclick="goto('/peopleandpets.html')">
+            <div class="gallery-card__image">
+              <img src="images/petsandpeoplecover.png" max-width="920px" max-height="798px" alt="Boy with bird">
+            </div>
+            <div class="gallery-card__title">
+              People and Pets
+            </div>
+          </div>
+  
+          <div class="gallery-card" onclick="goto('/dogs.html')">
+            <div class="gallery-card__image">
+              <img src="images/dogcover.png" max-width="920px" max-height="798px" alt="A picture of a dog">
+            </div>
+            <div class="gallery-card__title">
+              Dogs
+            </div>
+          </div>
+        </div>
+
+        <div class="gallery-row">
+          <div class="gallery-card" onclick="goto('/Cats.html')">
+            <div class="gallery-card__image">
+              <img src="images/catscover.png" max-width="920px" max-height="798px" alt="Picture of a cat">
+            </div>
+            <div class="gallery-card__title">
+              Cats
+            </div>
+          </div>
+  
+          <div class="gallery-card" onclick="goto('/zoo-animals.html')">
+            <div class="gallery-card__image">
+              <img src="images/zooanimalcover.png" max-width="920px" max-height="798px" alt="A picture of a giraff">
+            </div>
+            <div class="gallery-card__title">
+              Zoo animals
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!--footer html section-->
+      <div class="footer footer--homepage row">
+        <div class="footer__contact_us contactus-footer col">Contact us
+        <div class="footer-option">
+          Phone Number: <a href="tel:+64 276-780-011">+64-276-780-011</a>
+          <br>
+          Email: <a href="mailto:annikamarriner@shcs.school.nz">annikamarriner@shcs.school.nz</a><br>          
+        </div>
+      </div>
+      <div class="footer about-footer col">About 
+        <div class="footer-option">
+          <a href="about-annika.html">About Annika Page</a>
+          <br>
+          <a href="termsconditions.html">Terms & Conditions</a>      
+          <br>
+          <a href="FAQ.html">Frequently asked questions</a>         
+        </div>
+      </div>
+      <div class="footer information-footer col">Information
+        <div class="footer-option">
+          <a href="about-annika.html">About Annika Page</a>
+          <br>
+          <a href="privacypolicy.html">Privacy Policy</a>      
+          <br>
+          <a href="termsconditions.html">Terms and Conditions</a>         
+        </div>
       </div>
     </div>
-
-
-    <div class="footer about-footer col">About 
-      <div class="footer-option">
-        <a href="about-annika.html">About Annika Page</a>
-        <br>
-        <a href="termsconditions.html">Terms & Conditions</a>      
-        <br>
-        <a href="FAQ.html">Frequently asked questions</a>         
-      </div>
-    </div>
-
-
-
-    <div class="footer information-footer col">Information
-      <div class="footer-option">
-        <a href="about-annika.html">About Annika Page</a>
-        <br>
-        <a href="privacypolicy.html">Privacy Policy</a>      
-        <br>
-        <a href="termsconditions.html">Terms and Conditions</a>         
-      </div>
-
-      </div>
-    </div>
-
   </div>
 </div>
 
