--- a/about-annika.html
+++ b/about-annika.html
@@ -92,8 +92,9 @@
  
 
 </div>
+
 <!--footer html section-->
-<div class="footer footer-about row">
+<div class="footer footer--homepage row">
   <div class="footer__contact_us contactus-footer col">Contact us
   <div class="footer-option">
     Phone Number: <a href="tel:+64 276-780-011">+64-276-780-011</a>
@@ -117,11 +118,7 @@
 
 <div class="footer information-footer col">Information
   <div class="footer-option">
-    <a href="about-annika.html">About Annika Page</a>
-    <br>
-    <a href="privacypolicy.html">Privacy Policy</a>      
-    <br>
-    <a href="termsconditions.html">Terms and Conditions</a>         
+    <a href="privacypolicy.html">Privacy Policy</a>           
   </div>
 
   </div>
