--- a/contact-us-submit.html
+++ b/contact-us-submit.html
@@ -61,53 +61,49 @@
           </div>
       </div>
       
-      
-      <!--footer html section-->
-      <div class="footer footer-contactsubmit row">
-        <div class="footer__contact_us contactus-footer col">Contact us
-        <div class="footer-option">
-          Phone Number: <a href="tel:+64 276-780-011">+64-276-780-011</a>
-          <br>
-          Email: <a href="mailto:annikamarriner@shcs.school.nz">annikamarriner@shcs.school.nz</a><br>          
-        </div>
-      </div>
+   
+<!--footer html section-->
+<div class="footer footer--homepage row">
+  <div class="footer__contact_us contactus-footer col">Contact us
+  <div class="footer-option">
+    Phone Number: <a href="tel:+64 276-780-011">+64-276-780-011</a>
+    <br>
+    Email: <a href="mailto:annikamarriner@shcs.school.nz">annikamarriner@shcs.school.nz</a><br>          
+  </div>
+</div>
 
 
-      <div class="footer about-footer col">About 
-        <div class="footer-option">
-          <a href="about-annika.html">About Annika Page</a>
-          <br>
-          <a href="termsconditions.html">Terms & Conditions</a>      
-          <br>
-          <a href="FAQ.html">Frequently asked questions</a>         
-        </div>
-      </div>
+<div class="footer about-footer col">About 
+  <div class="footer-option">
+    <a href="about-annika.html">About Annika Page</a>
+    <br>
+    <a href="termsconditions.html">Terms & Conditions</a>      
+    <br>
+    <a href="FAQ.html">Frequently asked questions</a>         
+  </div>
+</div>
 
 
-  
-      <div class="footer information-footer col">Information
-        <div class="footer-option">
-          <a href="about-annika.html">About Annika Page</a>
-          <br>
-          <a href="privacypolicy.html">Privacy Policy</a>      
-          <br>
-          <a href="termsconditions.html">Terms and Conditions</a>         
-        </div>
-  
-        </div>
-      </div>
 
-    </div>
+<div class="footer information-footer col">Information
+  <div class="footer-option">
+    <a href="privacypolicy.html">Privacy Policy</a>           
   </div>
 
-  <!-- JS for VUE and Airtable -->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.2/axios.min.js"> </script>
-  <!--allows us to display and get data from airtable-->
-  <script src="https://cdn.jsdelivr.net/nmp/vue@2.5.13/dist/vue.js"></script>
-  <!--allows us to display dynamic data easily-->
+  </div>
+</div>
 
-  <!--Custome JS for VUE -->
-  <script src="VUE.js"></script>
+</div>
+</div>
+
+<!-- JS for VUE and Airtable -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.2/axios.min.js"> </script>
+<!--allows us to display and get data from airtable-->
+<script src="https://cdn.jsdelivr.net/nmp/vue@2.5.13/dist/vue.js"></script>
+<!--allows us to display dynamic data easily-->
+
+<!--Custome JS for VUE -->
+<script src="VUE.js"></script>
 
 </div>
 
