--- a/ourblog.html
+++ b/ourblog.html
@@ -32,21 +32,20 @@
                   Our Work
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item" href="occasions.html">Occasions</a></li>
-                  <li><a class="dropdown-item" href="pets.html">Pets</a></li>
-                  <li><a class="dropdown-item" href="contemporary.html">Contemporary</a></li>
-                  <li><a class="dropdown-item" href="nature.html">Nature</a></li>
+                  <li><a class="dropdown-item" href="galleries.html">Galleries</a></li>
                 </ul>
               </div>
-              <a href="ourcustomers.html">Our Customers</a>
-              <a href="about-annika.html">About Annika</a>
-              <a href="pricing.html">Pricing</a>
+              <a href="testimonials.html">Testimonials</a>
+              
 
-              <div class="dropdown dropdown--ContactUs">
+              <div class="dropdown dropdown--About">
                 <a href="contact-us.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                  Contact Us
+                  About
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                  <li><a class="dropdown-item" href="about-annika.html">About Annika</a></li>
+                  <li><a class="dropdown-item" href="contact-us.html">Contact Us</a></li>
+                  <li><a class="dropdown-item" href="pricing.html">Pricing</a></li>
                   <li><a class="dropdown-item" href="FAQ.html">FAQ's</a></li>
                 </ul>
               </div>
@@ -66,9 +65,8 @@
      
 <div class="blog-row1">
        <div class="subheading-blog">
-           Riley
-          <br>
-          _________________
+           Riley 
+          __________
         </div>
         <p class="blog-text"> 21 July 2021<br> 
         Riley came to live with Annika earlier this month. She is a very active puppy full of mischeif and fun.</p>
