--- a/ourwork.html
+++ b/ourwork.html
@@ -5,6 +5,7 @@
   <!--links to bootstrap in order to include the server in my coding-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,14 +15,14 @@
 
 <body>
   <div class="container-fluid">
-    <div class="app">
       <div class="header">
         <div class="banner">
+          <a href="homepage.html"><img src="images/AMlogotransparent.png"></a>
           <!--adding "burger" navigation for mobile devices --- ensuring responsiveness -->
           <a href="javascript:void(0);" class="icon" onclick="openMobileNav()">
             <i class="fa fa-bars"></i>
           </a>
-
+        </div>
           <!--creating Navigation bar and linking them to appropriate pages-->
           <div class="navigation">
             <div class="topnav">
@@ -29,10 +30,13 @@
               
               <div class="dropdown dropdown--OurWork">
                 <a href="ourwork.html" class="dropdown-toggle" id="dd" data-bs-toggle="dropdown" aria-expanded="false">
-                  Our Work
+                  Collection
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                  <li><a class="dropdown-item" href="galleries.html">Galleries</a></li>
+                  <li><a class="dropdown-item" href="contemporary.html">Contemporary</a></li>
+                  <li><a class="dropdown-item" href="nature.html">Nature</a></li>
+                  <li><a class="dropdown-item" href="animals.html">Animals</a></li>
+                  <li><a class="dropdown-item" href="occasions.html">Occasions</a></li>
                 </ul>
               </div>
               <a href="testimonials.html">Testimonials</a>
@@ -53,8 +57,6 @@
             </div>
           </div>
         </div>
-      </div>
-      </div>
 
         <!-- content section html -->
 <div class="text_heading">
