--- a/about-annika.html
+++ b/about-annika.html
@@ -26,9 +26,8 @@
           <!--creating Navigation bar and linking them to appropriate pages-->
           <div class="navigation">
             <div class="topnav">
-              <a href="homepage.html">Home</a>
-              
-              <div class="dropdown dropdown--OurWork">
+              <div class="nav-item"><a href="homepage.html">Home</a></div>
+              <div class="nav-item dropdown dropdown--OurWork">
                 <a href="ourwork.html" class="dropdown-toggle" id="dd" data-bs-toggle="dropdown" aria-expanded="false">
                   Collection
                 </a>
@@ -36,13 +35,13 @@
                   <li><a class="dropdown-item" href="contemporary.html">Contemporary</a></li>
                   <li><a class="dropdown-item" href="nature.html">Nature</a></li>
                   <li><a class="dropdown-item" href="animals.html">Animals</a></li>
-                  <li><a class="dropdown-item" href="occasions.html">Occasions</a></li>
+                  <li><a class="dropdown-item" href="people.html">People</a></li>
                 </ul>
               </div>
-              <a href="testimonials.html">Testimonials</a>
+              <div class="nav-item"><a href="testimonials.html">Testimonials</a></div>
               
 
-              <div class="dropdown dropdown--About">
+              <div class="nav-item dropdown dropdown--About">
                 <a href="contact-us.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                   About
                 </a>
@@ -53,7 +52,7 @@
                   <li><a class="dropdown-item" href="FAQ.html">FAQ's</a></li>
                 </ul>
               </div>
-              <a href="ourblog.html">Our Blog</a>
+              <div class="nav-item"><a href="ourblog.html">Our Blog</a></div>
             </div>
           </div>
         </div>
@@ -80,10 +79,9 @@
         and capture their special moments. She has won  <br>
         multiple awards for her work and continues to<br>
         grow and push herself as a photographer.<br>
-      </div>
-      <div class="getintouch-about-container">
         <button class="getintouch-about"><a href="contact-us.html"><h1>Get In Touch</h1></a></button>
-    </div>
+      </div>
+
       </div>
 </div>
 <!--footer html section-->
@@ -127,7 +125,7 @@
 <!--allows us to display dynamic data easily-->
 
 <!--Custome JS for VUE -->
-<script src="VUE.js"></script>
+<script src="mainVUE.js"></script>
 
 </div>
 
