--- a/pricing.html
+++ b/pricing.html
@@ -26,9 +26,8 @@
           <!--creating Navigation bar and linking them to appropriate pages-->
           <div class="navigation">
             <div class="topnav">
-              <a href="homepage.html">Home</a>
-              
-              <div class="dropdown dropdown--OurWork">
+              <div class="nav-item"><a href="homepage.html">Home</a></div>
+              <div class="nav-item dropdown dropdown--OurWork">
                 <a href="ourwork.html" class="dropdown-toggle" id="dd" data-bs-toggle="dropdown" aria-expanded="false">
                   Collection
                 </a>
@@ -36,13 +35,13 @@
                   <li><a class="dropdown-item" href="contemporary.html">Contemporary</a></li>
                   <li><a class="dropdown-item" href="nature.html">Nature</a></li>
                   <li><a class="dropdown-item" href="animals.html">Animals</a></li>
-                  <li><a class="dropdown-item" href="occasions.html">Occasions</a></li>
+                  <li><a class="dropdown-item" href="people.html">People</a></li>
                 </ul>
               </div>
-              <a href="testimonials.html">Testimonials</a>
+              <div class="nav-item"><a href="testimonials.html">Testimonials</a></div>
               
 
-              <div class="dropdown dropdown--About">
+              <div class="nav-item dropdown dropdown--About">
                 <a href="contact-us.html" class="dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                   About
                 </a>
@@ -53,10 +52,11 @@
                   <li><a class="dropdown-item" href="FAQ.html">FAQ's</a></li>
                 </ul>
               </div>
-              <a href="ourblog.html">Our Blog</a>
+              <div class="nav-item"><a href="ourblog.html">Our Blog</a></div>
             </div>
           </div>
         </div>
+
 
         <!-- content section html -->
 <div class="text_heading">
@@ -88,7 +88,7 @@
         We have a number of packages available. <br>
         Please get in touch for a quote<br><br>
 
-        <button class="getintouch-about"><a href="contact-us.html"><h1>Get In Touch</h1></a></button>
+        <!-- <button class="getintouch-about"><a href="contact-us.html"><h1>Get In Touch</h1></a></button> -->
     </div>
 
 
@@ -138,7 +138,7 @@
 <!--allows us to display dynamic data easily-->
 
 <!--Custome JS for VUE -->
-<script src="VUE.js"></script>
+<script src="mainVUE.js"></script>
 
 </div>
 
